--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -18,33 +18,41 @@ td {
 }
 
 .md-typeset__table table:not([class]) {
-    font-size: .74rem;
+    font-size: .60rem;
     border-right: none;
 }
 
 .md-typeset__table table:not([class]) td,
 .md-typeset__table table:not([class]) th {
-    padding: 9px;
+    padding: 7px;
+    }
+    
+    /* set a minimum width for table cells */
+    .md-typeset table:not([class]) th {
+        min-width: 3rem;
 }
 
 /* light mode alternating table bg colors */
 .md-typeset__table tr:nth-child(2n) {
-    background-color: #f8f8f8;
+    background-color: #ccc0bb;
 }
 
 /* dark mode alternating table bg colors */
 [data-md-color-scheme="slate"] .md-typeset__table tr:nth-child(2n) {
-    background-color: hsla(var(--md-hue), 25%, 25%, 1)
+    background-color: hsla(var(--md-hue), 20%, 25%, 1)
 }
 
 /* END customize tables to look like github */
 
-.md-typeset__table {
-    width: 100%;
-    height: auto;
-    border-collapse: collapse;
+.md-typeset table {
+    table-layout: auto !important;
+    width: auto !important;
+    min-width: 3.5rem;
 }
 
-.md-typeset__table table:not([class]) {
-    display: table
+/* Prevent wrapping so cells stay compact */
+.md-typeset th,
+.md-typeset td {
+    padding: 0.7em 0.6em !important;
+    /* Reduce padding too */
 }
